@@ -2760,7 +2760,7 @@ Defaulting color scheme to 'NoColor'"""
         page(self.shell.pycolorize(file_read(filename)),
              screen_lines=self.shell.rc.screen_length)
 
-    def magic_paste(self, parameter_s=''):
+    def magic_cpaste(self, parameter_s=''):
         """Allows you to paste & execute a pre-formatted code block from 
         clipboard.
         
@@ -2772,7 +2772,7 @@ Defaulting color scheme to 'NoColor'"""
         method definitions. The executed block is also assigned to variable 
         named 'pasted_block' for later editing with '%edit pasted_block'.
         
-        You can also pass a variable name as an argument, e.g. '%paste foo'.
+        You can also pass a variable name as an argument, e.g. '%cpaste foo'.
         This assigns the pasted block to variable 'foo' as string, without 
         dedenting or executing it.
         
